# game

./: .gitignore  .travis.yml  Makefile  README.md
docs/: 001-Introduction.md  001-basic-client-server.md
src/game/: helpers.go  main.go
src/game/environments/: helpers.go  opengl.go  terminal.go
src/game/inputs/: keyboard.go
src/game/models/: models.go  player.go  scene.go
src/game/network/: client.go  server.go
src/game/renderers/: base.go  console.go
src/omega/: .gitattributes  .gitignore  CMakeLists.txt  README.md  SConstruct  base_object.hpp  conanfile.txt  config.cpp  config.hpp  config.yaml  fps_counter.hpp  main.cpp  matrix.cpp  matrix.hpp  o_math.hpp  obj_converter.py  objects.cpp  objects.hpp  raycaster.cpp  raycaster.hpp  requirements.txt  sphere.hpp  structure.txt  triangle.hpp  vector.cpp  vector.hpp  window.cpp  window.hpp
src/omega/other/: conan-mingw.profile
src/omega/tests/: CMakeLists.txt  SConstruct  test_matrix.cpp  test_vector.cpp
src/omega/utils/: stat.h
